erDiagram
    users {
        int id PK
        string email
        string name
        string image
        timestamp created_at
        timestamp updated_at
        int rating_count
        int rating_avg // average rating * 10 (e.g., 45 = 4.5)
    }

    wishlists {
        int id PK
        int user_id FK
        string name
        boolean is_default
        timestamp created_at
        timestamp updated_at
    }

    wishlist_items {
        int id PK
        int wishlist_id FK
        int product_id FK
        int variant_id FK
        timestamp added_at
    }

    categories {
        int id PK
        string name
        string slug
        int parent_id FK
    }

    products {
        int id PK
        string name
        string description
        int price_cents // price stored as integer cents
        int stock
        int category_id FK
        timestamp created_at
        timestamp updated_at
        int rating_count
        int rating_avg // average *10
    }

    product_images {
        int id PK
        int product_id FK
        string url
        string alt_text
        int display_order
    }

    product_variants {
        int id PK
        int product_id FK
        string sku
        int price_cents
        int stock
    }

    product_options {
        int id PK
        string name
    }

    product_option_values {
        int id PK
        int option_id FK
        string value
    }

    product_option_items {
        int id PK
        int variant_id FK
        int option_value_id FK
    }

    product_reviews {
        int id PK
        int product_id FK
        int user_id FK
        int rating // 1-5
        string comment
        timestamp created_at
    }

    review_images {
        int id PK
        int review_id FK
        string url
        string alt_text
    }

    carts {
        int id PK
        int user_id FK
        timestamp created_at
        timestamp updated_at
    }

    cart_items {
        int id PK
        int cart_id FK
        int product_id FK
        int variant_id FK
        int quantity
    }

    orders {
        int id PK
        int user_id FK
        int total_cents
        int status // 0=pending,1=paid,2=shipped,3=delivered,4=cancelled
        timestamp created_at
        timestamp updated_at
    }

    order_items {
        int id PK
        int order_id FK
        int product_id FK
        int variant_id FK
        int quantity
        int price_cents
    }

    payments {
        int id PK
        int order_id FK
        string provider
        int status // 0=initiated,1=succeeded,2=failed
        int amount_cents
        string currency
        string transaction_id
        timestamp paid_at
    }

    shipping_infos {
        int id PK
        int order_id FK
        string carrier
        string tracking_number
        int status // 0=pending,1=shipped,2=delivered,3=returned
        timestamp shipped_at
        timestamp estimated_delivery
    }

    order_status_history {
        int id PK
        int order_id FK
        int status
        timestamp changed_at
        string note
    }

    discounts {
        int id PK
        string code
        string type // "percentage" or "fixed"
        int value_cents // discount amount in cents (or percent*100)
        timestamp expires_at
        int usage_limit
        int used_count
        int per_user_limit
    }

    order_discounts {
        int id PK
        int order_id FK
        int discount_id FK
        int amount_cents
    }

    user_addresses {
        int id PK
        int user_id FK
        int type // 0=shipping,1=billing
        string line1
        string line2
        string city
        string state
        string zip
        string country
        boolean is_default
    }

    inventory_logs {
        int id PK
        int product_id FK
        int change // positive or negative
        string reason
        timestamp created_at
    }

    audit_logs {
        int id PK
        int user_id FK
        string action
        string table_name
        int record_id
        string details
        timestamp created_at
    }

    %% Relationships
    users ||--o{ wishlists : has
    wishlists ||--o{ wishlist_items : contains
    wishlist_items }o--o| product_variants : uses
    users ||--o{ user_addresses : has
    users ||--o{ orders : places
    users ||--o{ product_reviews : writes
    users ||--o{ carts : has
    
    
    users ||--o{ audit_logs : logs

    categories ||--o{ products : contains
    products ||--o{ product_images : has
    products ||--o{ product_variants : has
    products ||--o{ product_reviews : receives
    product_variants ||--o{ product_option_items : has
    product_options ||--o{ product_option_values : defines
    product_option_values ||--o{ product_option_items : belongs_to

    carts ||--o{ cart_items : contains
    cart_items }o--|| products : references
    cart_items }o--o| product_variants : uses

    orders ||--o{ order_items : contains
    order_items }o--|| products : references
    order_items }o--o| product_variants : uses
    orders ||--o{ payments : paid_by
    orders ||--o{ shipping_infos : shipped_by
    orders ||--o{ order_status_history : history
    orders ||--o{ order_discounts : has

    discounts ||--o{ order_discounts : applied_to

    products ||--o{ inventory_logs : tracks

    product_reviews ||--o{ review_images : has
